<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp">


        <Button
            style="@android:style/Widget.Button"
            android:textSize="20dp"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold"
        android:text="Retour au annonce"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
            android:onClick="Retour"
            />



    </LinearLayout>


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
    <TextView
        android:gravity="center"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="22dp"
        android:textStyle="bold"
        android:text="Envoyer un e-mail au fournisseur"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:text="Pensez à indiquer vos coordonnées téléphoniques pour que l'annonceur puisse vous contacter facilement."
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:text="@string/name"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:background="#cafcb9"
            android:textSize="15dp"
            style="@android:style/Widget.EditText"
            android:layout_weight="1"
            android:id="@+id/Edit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:text="@string/email"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <EditText
            android:background="#cafcb9"
            android:textSize="15dp"
            style="@android:style/Widget.EditText"
            android:layout_weight="1"
            android:id="@+id/Edit_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:text="@string/phone"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:background="#cafcb9"
            android:textSize="15dp"
            style="@android:style/Widget.EditText"
            android:id="@+id/Edit_phone"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:phoneNumber="true"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp">
        <TextView
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:text="@string/Text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:background="#cafcb9"
            android:textSize="15dp"
            style="@android:style/Widget.EditText"
            android:layout_weight="1"
            android:id="@+id/Edit_text"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:ems="1024"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <CheckBox
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox"/>
        <TextView
            android:checked="false"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="18dp"
            android:layout_weight="9"
            android:text="Recevoir une copie de ce mail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="1024"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:gravity="center">
        <Button
            android:gravity="center"
            style="@android:style/Widget.Button"
            android:textSize="15dp"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold"
            android:text="Envoyer"
            android:onClick = "Envoyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
    <include layout="@layout/commonfooter"/>
</LinearLayout>
