<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tangyuhuang.propinko.Connexion"
    android:background="#f4f7f4">

    <!-- Login progress -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Connectez-vous à votre compte"
                android:id="@+id/tv1Connexion"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="22dp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp" />

            <ScrollView android:id="@+id/login_form" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tv1Connexion"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp">

                <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:orientation="vertical"
                    android:weightSum="1">

                    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress" android:maxLines="1"
                            android:singleLine="true"
                            android:background="#cafcb9"
                            style="@android:style/Widget.EditText"
                            android:minHeight="50dp"
                            android:textSize="20dp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.78"
                        android:layout_marginTop="10dp">

                        <EditText android:id="@+id/password" android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in"
                            android:imeOptions="actionUnspecified" android:inputType="textPassword"
                            android:maxLines="1" android:singleLine="true"
                            android:minHeight="50dp"
                            android:background="#cafcb9"
                            android:textSize="20dp"
                            android:layout_marginTop="30dp"
                            style="@android:style/Widget.EditText" />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Se souvenir de moi"
                            android:id="@+id/checkBoxSouvenir"
                            android:layout_marginTop="20dp"
                            android:checked="false"
                            android:textColor="@android:color/black"
                            android:layout_column="0"
                            android:textSize="10dp" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:text="Mot de passe oublié"
                            android:id="@+id/btnMotDePasseOublie"
                            android:textSize="10dp"
                            android:layout_marginLeft="70dp"
                            android:layout_marginTop="20dp"
                            android:background="#f4f7f4"
                            android:clickable="true"
                            android:textColor="@android:color/holo_blue_light"
                            style="@style/AppTheme" />

                    </LinearLayout>

                    <Button android:id="@+id/btnConnexion" style="@android:style/Widget.Button"
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:layout_marginTop="15dp" android:text="@string/action_sign_in"
                        android:textStyle="bold"
                        android:textColor="@android:color/holo_blue_light"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="------------------Ou------------------"
                        android:id="@+id/tv2Connexion"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:textColor="@android:color/holo_blue_light"
                        android:layout_below="@+id/tv1Connexion"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Vous n&apos;être pas encore membre Propinko ?"
                        android:id="@+id/tv3Connexion"
                        android:layout_gravity="center_horizontal"
                        android:textSize="15dp"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentEnd="false"
                        android:layout_marginTop="15dp"
                        android:textColor="@android:color/black" />

                    <Button
                        style="@style/AppTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Inscription"
                        android:id="@+id/btnInscription"
                        android:textSize="20dp"
                        android:background="#f4f7f4"
                        android:clickable="true"
                        android:textColor="@android:color/holo_blue_light"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv4Connexion"
                        android:layout_marginTop="-10dp" />

                </LinearLayout>
            </ScrollView>

        </RelativeLayout>
    </ScrollView>

</LinearLayout>
