<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PartieJeDepose.Annonces"
    android:background="#f4f7f4">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff">

<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/image_projecteur"
        android:id="@+id/picture"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp">
        <Button
            style="@android:style/Widget.Button"
            android:textSize="10sp"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold"
            android:text="@string/Descriptions"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="Descriptions"
            android:id="@+id/btn_descriptions"
            />

        <Button
            style="@android:style/Widget.Button"
            android:textSize="10sp"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold"
            android:text="@string/Tarifs"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="Tarifs"
            android:id="@+id/btn_tarifs"/>

        <Button
            style="@android:style/Widget.Button"
            android:textSize="10sp"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold"
            android:text="Disponibilité"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="Disponibilites"
            android:id="@+id/btn_disponibilites"/>
        <Button
            style="@android:style/Widget.Button"
            android:textSize="10sp"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold"
            android:text="Contacts"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="Contacts"
            android:id="@+id/btn_contacts"/>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_marginTop="280dp"
        android:text="@string/Descriptions"
        android:textStyle="bold"
        android:id="@+id/txt_descriptions" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_marginTop="280dp"
        android:text="@string/Disponibilites"
        android:textStyle="bold"
        android:id="@+id/txt_disponibilites"
        android:visibility="invisible"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/btnDispoAnnonceTarifsEtPhotos"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:id="@+id/text_descriptions"
        android:layout_marginTop="320dp">

    </TextView>

    <CalendarView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/calendarViewAnnonceDispos"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/btnTarifEtPhotoAnnonceDispos"
        android:layout_marginTop="320dp"
        android:background="#eefadf"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"/>
<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textColor="@android:color/black"
android:textSize="15sp"
android:layout_marginTop="280dp"
android:text="Tarifs : "
    android:textStyle="bold"
    android:visibility="invisible"
    android:id="@+id/txt_tarifs"/>

    <TableLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:visibility="invisible"
        android:id="@+id/tableau_tarifs"
        android:layout_gravity="center_horizontal">

        <TableRow
            android:background="@android:color/holo_green_light">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="Durée"
                android:id="@+id/tvDureeAnnonceTarifsEtPhotos"
                android:textSize="10sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="Prix"
                android:id="@+id/tvPrixAnnonceTarifsEtPhotos"
                android:textSize="10sp"
                android:textColor="@android:color/black"
                android:layout_column="1"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal" />

        </TableRow>
        <TableRow
            android:background="@android:color/holo_blue_dark" >
            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="Durée"
                android:textSize="10sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:layout_column="0"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="Prix"
                android:textSize="10sp"
                android:textColor="@android:color/black"
                android:layout_column="1"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal" />

        </TableRow>
        <TableRow
            android:background="@android:color/holo_blue_dark" >
            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="Durée"
                android:textSize="10sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:layout_column="0"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="Prix"
                android:textSize="10sp"
                android:textColor="@android:color/black"
                android:layout_column="1"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal" />


        </TableRow>
        <TableRow
            android:background="@android:color/holo_blue_dark" >
            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="Durée"
                android:textSize="10sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:layout_column="0"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="Prix"
                android:textSize="10sp"
                android:textColor="@android:color/black"
                android:layout_column="1"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal" />

        </TableRow>
        <TableRow
            android:background="@android:color/holo_blue_dark" >
            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="Durée"
                android:textSize="10sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:layout_column="0"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="Prix"
                android:textSize="10sp"
                android:textColor="@android:color/black"
                android:layout_column="1"
                android:layout_gravity="center_horizontal" />

        </TableRow>
    </TableLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_marginTop="280dp"
        android:text="Contacts"
        android:textStyle="bold"
        android:id="@+id/txt_contacts"
        android:visibility="invisible"
        />
    <Button
        android:layout_marginTop="310dp"
        style="@android:style/Widget.Button"
        android:textSize="20sp"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        android:text="Voir le numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Voir_numero_contacts"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        android:id="@+id/btn_voir_num_contacts"/>
    <Button
        android:layout_marginTop="310dp"
        style="@android:style/Widget.Button"
        android:textSize="20sp"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Numero_contacts"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        android:id="@+id/btn_num_contacts"/>

    <Button
        android:layout_marginTop="380dp"
        style="@android:style/Widget.Button"
        android:textSize="20sp"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        android:text="Envoyer un e-mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Envoyer_email"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        android:id="@+id/btn_email_contacts"
        />
</FrameLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#FF99CC00"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Chercher"
            style="@android:style/Widget.Button"
            android:textColor="@android:color/holo_blue_dark"
            android:id="@+id/commonFooter_bSearch"/>
    </RelativeLayout>


</RelativeLayout>